ROS_Workspace/src/cameraSub/log/build_2023-05-02_05-06-28/cameraPub/stderr.log
  File "/home/max/Desktop/VisionCode/Honours_a1797823_a1764124/ROS_Workspace/src/cameraPub/install/cameraPub/lib/python3.8/site-packages/cameraPub/cameraPublisher.py", line 31
    frame = cv2.resize(frame, (300 200))
                                   ^
SyntaxError: invalid syntax

